715565262/1.2/Readme.md
[![RimWorld 1.2](https://img.shields.io/badge/RimWorld-1.2-brightgreen.svg)](http://rimworldgame.com/)

Colony Manager allows you to make colonists do the more tedious parts of managing a colony, making sure you're never out of vital resources again\*.

![Important](https://banners.karel-kroeze.nl/title/Important.png)

**Requires a new save game.**
Adds a worktype, which is stored in the world, which means you need to start a new game after adding/removing this mod.

**Production & Import/Export tabs missing.**
The Production and Import & Export tabs are still disabled due to a lack of time.

![Features](https://banners.karel-kroeze.nl/title/Features.png)

**Hunting jobs**

- Set a target for meat, and never worry about designating hunting manually again!
- Set an area to clear of all predators - keep your home area safe!

**Forestry jobs**

- Set a target for wood, and never worry about designating lumber manually again!
- Automatically clear wind turbine catchment areas to ensure they're working at maximum efficiency.
- Set an area to clear of all vegetation - make sure there's no possible cover or retreat for any hostiles that dare attack you.

**Livestock jobs**

- Set a target for animals (for four separate age/sex combinations), and pawns will auto-butcher and/or tame to manage your herd.
- Restrict animals to specific areas (for example to separate male/female animals and prevent breeding).
- Auto-butcher, tame and train according to your specifications.

**Overview**

- Clear overview of all jobs
- Show stock and designated levels for the last day, month and year
- Show pawns capable of a job, and set work status
- Prioritize jobs, the manager will handle prioritizing jobs on worktables (however standard priority ordering across worktables still applies).

**Import & Export**
== coming back soon(tm) ==

![How does it work?](https://banners.karel-kroeze.nl/title/How%20does%20it%20work%3F.png)

You can manually set jobs in the new Manager tab on the bottom of the screen. Once set, a colonist with the manager skill and worktype enabled will go to a manager station to figure out the best way to assign designations.
Periodically, the manager will check if the assigned designations are still up-to-date, and make changes or delete designations where required. The manager will not touch designations that are set manually, nor will managers create jobs. You're still the overlord.
In theory there is no real limit to the number of manager jobs that can be created.

![Notes](https://banners.karel-kroeze.nl/title/Notes.png)

- Requires a new save. Adds a worktype, which in my tests gave errors on old savegames. If you also have my Work Tab mod, you should be able to add this mod in an ongoing save.


![Contributors](https://banners.karel-kroeze.nl/title/Contributors.png)
 - KapTaiN KaVerN:	Minifiable research benches
 - Moumix3:	Research tweaks
 - duduluu:	Chinese translation
 - MossieuLeBlanc:	French translation
 - Lauri7x3:	German translation
 - Well-sp:	Russian translation (update)
 - Alex TD:	Various fixes and improvements
 - Firty:	Portuguese (Brazilian) translation
 - Suh. Junmin:	Korean translation
 - harrisongarya:	Research tab
 - rw-chaos:	German translation (update)
 - Marcos Villar:	Portuguese (Brazilian) translation (update)
 - CrapoFR:	French translation update
 - maarxx:	Various fixes and improvements
 - rimpy-custom:	Fix for Russian translation
 - InsanityPrelude:	Add AllWork tag to Managing WorkTypeDef (#181)

![Think you found a bug?](https://banners.karel-kroeze.nl/title/Think%20you%20found%20a%20bug%3F.png)  
Please read [this guide](http://steamcommunity.com/sharedfiles/filedetails/?id=725234314) before creating a bug report,
and then create a bug report [here](https://github.com/fluffy-mods/ColonyManager/issues)

![Older versions](https://banners.karel-kroeze.nl/title/Older%20versions.png)  
All current and past versions of this mod can be downloaded from [GitHub](https://github.com/fluffy-mods/ColonyManager/releases).

![License](https://banners.karel-kroeze.nl/title/License.png)  
All original code in this mod is licensed under the [MIT license](https://opensource.org/licenses/MIT). Do what you want, but give me credit.
All original content (e.g. text, imagery, sounds) in this mod is licensed under the [CC-BY-SA 4.0 license](http://creativecommons.org/licenses/by-sa/4.0/).

Parts of the code in this mod, and some content may be licensed by their original authors. If this is the case, the original author & license will either be given in the source code, or be in a LICENSE file next to the content. Please do not decompile my mods, but use the original source code available on [GitHub](https://github.com/fluffy-mods/ColonyManager/), so license information in the source code is preserved.

[![Supporters](https://banners.karel-kroeze.nl/donations.png)](https://ko-fi.com/fluffymods)

![Are you enjoying my mods?](https://banners.karel-kroeze.nl/title/Are%20you%20enjoying%20my%20mods%3F.png)  
Become a supporter and show your appreciation by buying me a coffee (or contribute towards a nice single malt).

[![Buy Me a Coffee](http://i.imgur.com/EjWiUwx.gif)](https://ko-fi.com/fluffymods)

[![I Have a Black Dog](https://i.ibb.co/ss59Rwy/New-Project-2.png)](https://www.youtube.com/watch?v=XiCrniLQGYc)


![Version](https://banners.karel-kroeze.nl/title/Version.png)  
This is version 4.33.653, for RimWorld 1.2.2753.